Fis Nav bar bug and projects bug when viewing on mobile

--- a/src/app/components/project-listing-section/project-listing-section.component.css
+++ b/src/app/components/project-listing-section/project-listing-section.component.css
@@ -67,3 +67,9 @@
     font-weight: bold;
     font-family: "lato", Calibri, serif;
 }
+
+@media screen and (max-width: 1000px) {
+    .github-projects {
+       grid-template-columns: 1fr;
+    }
+}
